<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.edu.utng.pcamacho.calculadoraapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_n1"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_n1"
        tools:ignore="LabelFor,TextFields" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_n2"
        android:textSize="20dp"
        tools:ignore="SpUsage" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_n2"
        android:inputType=""
        tools:ignore="LabelFor" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_res"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_res"
        android:inputType=""
        tools:ignore="LabelFor" />

    <Spinner
        android:id="@+id/spn_calculadoras"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/calculadoras"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/texto_sumar"
        android:id="@+id/btn_sumar"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_restar"
        android:id="@+id/btn_restar"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/texto_multiplicar"
        android:id="@+id/btn_multiplicar"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/texto_dividir"
        android:id="@+id/btn_dividir"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/texto_factorial"
        android:id="@+id/btn_factorial"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/texto_limpiar"
        android:id="@+id/btn_limpiar"
        />




</LinearLayout>

